# bot-test

./: .gitignore  README.md  config.yaml  example_test.py  pyproject.toml  pytest.ini  questions.txt  requirements.txt  static_control_page.html
.github/: copilot-instructions.md
.github/workflows/: pages.yml
docs/: .nojekyll  404.html  index.html
src/: __init__.py  bot_manager.py  chatbot_automator.py  darcy_tester.py  main.py  web_app.py
tests/: __init__.py  test_darcy_chatbot.py
